Store surface object in tablet cursor using QPointer

The SurfaceInterface can get destroyed and TabletCursorV2 may return a
dangling pointer.

BUG: 446255